--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <p class="life">It's me ...
                 <br>
 
-                <img src="my image Background Removed.png" alt="" style="background-color: rgb(59, 55, 56); float: right; margin-right: 220px; margin-top: 20px; border-radius: 50px; box-shadow:  
+                <img src="assets/images/my image Background Removed.png" alt="" style="background-color: rgb(59, 55, 56); float: right; margin-right: 220px; margin-top: 20px; border-radius: 50px; box-shadow:  
 
                         0 0 2rem #a5c7d7,
                         inset 0 0 2rem #578499,
@@ -239,20 +239,20 @@
             <br> <br>
             <br>
             <div style="display: flex; flex-direction: row;">
-                <a href="newchess.html" style="margin-left: 130px;"> <img src="chess.jpeg  " height="200px"
+                <a href="newchess.html" style="margin-left: 130px;"> <img src="assets/images/chess.jpeg" height="200px"
                         width="300px" style=" border-radius: 50px; box-shadow: 0 0 1rem white,
                     0 0 2rem #1cabee,
                     inset 0 0 2rem #1cabee,
                     0 0 2rem #1cabee;
                 ; ;"> </a>
 
-                <a href="registration.html" style="margin-left: 180px;"> <img src="registration-form.jpeg"
+                <a href="registration.html" style="margin-left: 180px;"> <img src="assets/images/registration-form.jpeg"
                         height="200px" width="300px" style="  border-radius: 50px; box-shadow: 0 0 1rem white,
                 0 0 2rem #1cabee,
                 inset 0 0 2rem #1cabee,
                 0 0 2rem #1cabee;
             ; ;"></a>
-                <a href="iframe-.html" style="margin-left:150px;"> <img src="iframe.png" height="200px" width="300px"
+                <a href="iframe-.html" style="margin-left:150px;"> <img src="assets/images/iframe.png" height="200px" width="300px"
                         style="  border-radius: 50px; box-shadow: 0 0 1rem white,
     0 0 2rem #1cabee,
     inset 0 0 2rem #1cabee,
@@ -266,21 +266,21 @@
 
             <br>
             <div style="display: flex; flex-direction: row;">
-                <a href="user.html" style="margin-left: 130px;"> <img src="user.png" height="200px" width="300px"
+                <a href="user.html" style="margin-left: 130px;"> <img src="assets/images/user.png" height="200px" width="300px"
                         style=" border-radius: 30px; box-shadow: 0 0 1rem white,
                     0 0 2rem #1cabee,
                     inset 0 0 2rem #1cabee,
                     0 0 2rem #1cabee;
                 ; ;"></a>
 
-                <a href="flex-2.html" style="margin-left: 180px;"> <img src="flex.png" height="200px" width="300px"
+                <a href="flex-2.html" style="margin-left: 180px;"> <img src="assets/images/flex.png" height="200px" width="300px"
                         style=" border-radius: 30px; box-shadow: 0 0 1rem white,
                 0 0 2rem #1cabee,
                 inset 0 0 2rem #1cabee,
                 0 0 2rem #1cabee;
             ; ;"></a>
 
-                <a href="flex-3.html" style="margin-left: 150px;"> <img src="flex.png" height="200px" width="300px"
+                <a href="flex-3.html" style="margin-left: 150px;"> <img src="assets/images/flex.png" height="200px" width="300px"
                         style="  border-radius: 30px; box-shadow: 0 0 1rem white,
     0 0 2rem #1cabee,
     inset 0 0 2rem #1cabee,
@@ -294,7 +294,7 @@
 
             <br>
             <div style="display: flex; flex-direction: row;">
-                <a href="layoutone.html" style="margin-left: 130px; height: 35px;"> <img src="layout.png" height="180px"
+                <a href="layoutone.html" style="margin-left: 130px; height: 35px;"> <img src="assets/images/layout.png" height="180px"
                         width="300px" style=" border-radius: 30px; box-shadow: 0 0 1rem white,
                     0 0 2rem #1cabee,
                     inset 0 0 2rem #1cabee,
@@ -302,7 +302,7 @@
                 ; ;"></a>
 
 
-                <a href="layouttwo.html" style="margin-left: 180px;height: 35px;"> <img src="layout.png" height="180px"
+                <a href="layouttwo.html" style="margin-left: 180px;height: 35px;"> <img src="assets/images/layout.png" height="180px"
                         width="300px" style="  border-radius: 30px; box-shadow: 0 0 1rem white,
                 0 0 2rem #1cabee,
                 inset 0 0 2rem #1cabee,
@@ -310,7 +310,7 @@
             ; ;"></a>
 
 
-                <a href="media.html" style="margin-left: 150px;height: 35px;"> <img src="media.png " height="180px"
+                <a href="media.html" style="margin-left: 150px;height: 35px;"> <img src="assets/images/media.png" height="180px"
                         width="300px" style="  border-radius: 30px; box-shadow: 0 0 1rem white,
                 0 0 2rem #1cabee,
                 inset 0 0 2rem #1cabee,
@@ -325,9 +325,9 @@
         <div class=" i-5" id="contact" style="background-color: black;">
             <span class="name" style="margin-left: 630px; color: #EF5A6F;  background-color: #49284852;">Contacts</span>
             <br><br><br>
-            <img src="call Background Removed.png" alt=" " height="180px" style="margin-left: 200px;">
-            <img src="mail. Background Removed.png" alt=" " height="165px" style="margin-left: 300px;">
-            <img src="git.png" alt=" " height="100px" style="margin-left: 300px;  margin-bottom: 25px;">
+            <img src="assets/images/call Background Removed.png" alt=" " height="180px" style="margin-left: 200px;">
+            <img src="assets/images/mail. Background Removed.png" alt=" " height="165px" style="margin-left: 300px;">
+            <img src="assets/images/git.png" alt=" " height="100px" style="margin-left: 300px;  margin-bottom: 25px;">
 
             <div style="display: flex; flex-direction: row;">
                 <h1 style="color: #EF5A6F; margin-left: 190px;"> +8767512181</h1>
