--- a/iframe-.html
+++ b/iframe-.html
@@ -141,11 +141,11 @@
                     former T20I player and a former captain of the Indian national cricket team. He is a right-handed
                     batsman and an occasional unorthodox right arm quick bowler. </p>
             </div>
-            <div class="top-four"><iframe src="assets/assets.html/assets/download (1). ..jpeg"  frameborder="0" class="table-one"  height="100%" width="100%"></iframe> </div>
+            <div class="top-four"><iframe src="./assets/images/download (1). ..jpeg"  frameborder="0" class="table-one"  height="100%" width="100%"></iframe> </div>
         </div>
         <div class="second-box">
-            <div class="middle-one"> <audio src="assets/assets.html/assets/champion audio.mp3" controls ></audio></div>
-            <div class="middle-two"> <video src="assets/assets.html/assets/videos.mp4 " controls height="100%"></video></div>
+            <div class="middle-one"> <audio src="./assets/images/champion audio.mp3" controls ></audio></div>
+            <div class="middle-two"> <video src="./assets/images/videos.mp4" controls height="100%"></video></div>
             <div class="middle-three"> <u>Virat_Kohli</u></div>
             <div class="middle-four"> <b>𝚅𝙸𝚁𝙰𝚃_𝙺𝙾𝙷𝙻𝙸</b></div>
         </div>
