--- a/user.html
+++ b/user.html
@@ -54,7 +54,7 @@
 <body>
     <div class="main-box">
         <div class="container">
-            <img id="image" src="enjoy1-removebg-preview.png" height="140vh" style="margin-left: 30%;">
+            <img id="image" src="./assets/images/enjoy1-removebg-preview.png" height="140vh" style="margin-left: 30%;">
             <br><br>
             
            <div class="main"> <h1 style="margin-left: 7%;">Login Form</h1></div>
