--- a/newchess.html
+++ b/newchess.html
@@ -36,28 +36,28 @@
 
 <body class="main">
     <div class="main-container" style="height: 100%;">
-        <div class="w"> <img src="assets/assets.html/assets/≥elephant Background Removed.png       " alt=""
+        <div class="w"> <img src="./assets/images/≥elephant Background Removed.png" alt=""
                 height="100%" width="100%"></div>
-        <div class="b"> <img src="assets/assets.html/assets/white horse Background Removed.png" alt="" width="100%"
+        <div class="b"> <img src="./assets/images/white horse Background Removed.png" alt="" width="100%"
                 height="100%"></div>
-        <div class="w"> <img src="assets/assets.html/assets//white Background Removed.png" width="100%" height="100%"></div>
-        <div class="b"><img src="assets/assets.html/assets/queen Background Removed 2.png" alt=""width="100%" height="100%" > </div>
-        <div class="w"> <img src="assets/assets.html/assets/king. Background Removed 2.png" alt=""width="100%" height="90%"></div>
-        <div class="b"><img src="assets/assets.html/assets/white Background Removed.png" width="100%" height="100%">
+        <div class="w"> <img src="./assets/images/white Background Removed.png" width="100%" height="100%"></div>
+        <div class="b"><img src="./assets/images/queen Background Removed 2.png" alt=""width="100%" height="100%" > </div>
+        <div class="w"><img src="./assets/images/king. Background Removed.png " alt=""width="100%" height="90%"></div>
+        <div class="b"><img src="./assets/images/white Background Removed.png" width="100%" height="100%">
         </div>
-        <div class="w"><img src="assets/assets.html/assets/white horse Background Removed.png" alt="" height="100%"
+        <div class="w"><img src="./assets/images/white horse Background Removed.png" alt="" height="100%"
                 width="100%"> </div>
-        <div class="b"> <img src="assets/assets.html/assets/≥elephant Background Removed.png       " alt=""
+        <div class="b"> <img src="./assets/images/≥elephant Background Removed.png    " alt=""
                 height="100%" width="100%"></div>
 
-        <div class="b"><img src="assets/assets.html/assets/pawn Background Removed.png"  alt="" height="100%" width="100%">  </div>     
-        <div class="w"><img src="assets/assets.html/assets/pawn Background Removed.png"  alt="" height="100%" width="100%"></div>
-        <div class="b"><img src="assets/assets.html/assets/pawn Background Removed.png"  alt="" height="100%" width="100%"></div>
-        <div class="w"><img src="assets/assets.html/assets/pawn Background Removed.png"  alt="" height="100%" width="100%"></div>
-        <div class="b"><img src="assets/assets.html/assets/pawn Background Removed.png"  alt="" height="100%" width="100%"></div>
-        <div class="w"><img src="assets/assets.html/assets/pawn Background Removed.png"  alt="" height="100%" width="100%"></div>
-        <div class="b"><img src="assets/assets.html/assets/pawn Background Removed.png"  alt="" height="100%" width="100%"></div>
-        <div class="w"><img src="assets/assets.html/assets/pawn Background Removed.png"  alt="" height="100%" width="100%"></div>
+        <div class="b"><img src="./assets/images/pawn Background Removed.png"  alt="" height="100%" width="100%">  </div>     
+        <div class="w"><img src="./assets/images/pawn Background Removed.png"  alt="" height="100%" width="100%"></div>
+        <div class="b"><img src="./assets/images/pawn Background Removed.png"  alt="" height="100%" width="100%"></div>
+        <div class="w"><img src="./assets/images/pawn Background Removed.png"  alt="" height="100%" width="100%"></div>
+        <div class="b"><img src="./assets/images/pawn Background Removed.png"  alt="" height="100%" width="100%"></div>
+        <div class="w"><img src="./assets/images/pawn Background Removed.png"  alt="" height="100%" width="100%"></div>
+        <div class="b"><img src="./assets/images/pawn Background Removed.png"  alt="" height="100%" width="100%"></div>
+        <div class="w"><img src="./assets/images/pawn Background Removed.png"  alt="" height="100%" width="100%"></div>
 
         <div class="w"></div>
         <div class="b"></div>
@@ -95,23 +95,23 @@
         <div class="b"></div>
         <div class="w"></div>
 
-        <div class="w"><img src="assets/assets.html/assets/pawnn Background Removed 2.png" alt="" height="100%" width="100%"></div>
-        <div class="b"><img src="assets/assets.html/assets/pawnn Background Removed 2.png" alt="" height="100%" width="100%"></div>
-        <div class="w"><img src="assets/assets.html/assets/pawnn Background Removed 2.png" alt="" height="100%" width="100%"></div>
-        <div class="b"><img src="assets/assets.html/assets/pawnn Background Removed 2.png" alt="" height="100%" width="100%"></div>
-        <div class="w"><img src="assets/assets.html/assets/pawnn Background Removed 2.png" alt="" height="100%" width="100%"></div>
-        <div class="b"><img src="assets/assets.html/assets/pawnn Background Removed 2.png" alt="" height="100%" width="100%"></div>
-        <div class="w"><img src="assets/assets.html/assets/pawnn Background Removed 2.png" alt="" height="100%" width="100%"></div>
-        <div class="b"><img src="assets/assets.html/assets/pawnn Background Removed 2.png" alt="" height="100%" width="100%"></div>
+        <div class="w"><img src="./assets/images/pawnn Background Removed 2.png" alt="" height="100%" width="100%"></div>
+        <div class="b"><img src="./assets/images/pawnn Background Removed 2.png" alt="" height="100%" width="100%"></div>
+        <div class="w"><img src="./assets/images/pawnn Background Removed 2.png" alt="" height="100%" width="100%"></div>
+        <div class="b"><img src="./assets/images/pawnn Background Removed 2.png" alt="" height="100%" width="100%"></div>
+        <div class="w"><img src="./assets/images/pawnn Background Removed 2.png" alt="" height="100%" width="100%"></div>
+        <div class="b"><img src="./assets/images/pawnn Background Removed 2.png" alt="" height="100%" width="100%"></div>
+        <div class="w"><img src="./assets/images/pawnn Background Removed 2.png" alt="" height="100%" width="100%"></div>
+        <div class="b"><img src="./assets/images/pawnn Background Removed 2.png" alt="" height="100%" width="100%"></div>
 
-        <div class="b"> <img src="assets/assets.html/assets/elephant.... Background Removed.png" alt="" height="100%" width="100%"></div>
-        <div class="w"> <img src="assets/assets.html/assets/black horse  Background Removed.png" alt="" height="100%" width="100%"></div>
-        <div class="b"><img src="assets/assets.html/assets/download2 Background Removed.png" alt="" height="100%" width="100%"></div>
-        <div class="w">  <img src="assets/assets.html/assets/black king Background Removed.png" alt="" height="100%" width="100%"></div>
-        <div class="b"> <img src="assets/assets.html/assets/download 1 Background Removed.png" alt="" height="100%" width="100%"></div>
-        <div class="w"><img src="assets/assets.html/assets/download2 Background Removed.png" alt="" height="100%" width="100%"></div>
-        <div class="b"><img src="assets/assets.html/assets/black horse  Background Removed.png" alt="" height="100%" width="100%"></div>
-        <div class="w"><img src="assets/assets.html/assets/elephant.... Background Removed.png" alt="" height="100%" width="100%"></div>
+        <div class="b"> <img src="./assets/images/elephant.... Background Removed.png" alt="" height="100%" width="100%"></div>
+        <div class="w"> <img src="./assets/images/black horse  Background Removed.png" alt="" height="100%" width="100%"></div>
+        <div class="b"><img src=" ./assets/images/download2 Background Removed.png" height="100%" width="100%"></div>
+        <div class="w">  <img src="./assets/images/black king Background Removed.png" alt="" height="100%" width="100%"></div>
+        <div class="b"> <img src="./assets/images/download 1 Background Removed.png" alt="" height="100%" width="100%"></div>
+        <div class="w"><img src="./assets/images/elephant.... Background Removed.png" alt="" height="100%" width="100%"></div>
+        <div class="b"><img src="./assets/images/black horse  Background Removed.png" alt="" height="100%" width="100%"></div>
+        <div class="w"><img src="./assets/images/elephant.... Background Removed.png " alt="" height="100%" width="100%"></div>
     </div>
 
 </body>
