--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
 
         .main {
-            background-color: #7588ba;
+            background-color: #61697f;
             height: 100px;
         }
 
@@ -74,7 +74,7 @@
 
         .name {
             font-size: 45px;
-            color: white;
+            color: rgba(0, 0, 0, 0.761);
             margin-left: 2%;
 
         }
@@ -100,9 +100,9 @@
         .Details {
             background-color: rgb(19, 18, 18);
             box-shadow: 0 0 1rem white,
-                0 0 2rem #177fb0,
-                inset 0 0 2rem #22607c,
-                0 0 2rem #466979;
+                0 0 2rem #1f5168,
+                inset 0 0 2rem #4cacd8,
+                0 0 2rem #8fb2c2;
             ;
             color: lightgreen;
             border-radius: 50px;
@@ -126,7 +126,7 @@
         <div class="main">
             <h1 class="modern" style="box-shadow: 5px 10px 10px rgba(19, 20, 20, 0.937);">
                 <ul>
-                    <span class="name "> <span style="color: aqua;">Port</span>folio..</span>
+                    <span class="name "> <span style="color: rgba(0, 226, 226, 0.948);">Port</span>folio..</span>
                     <li><a href="#home">HOME</a></li>
                     <li><a href="#about">ABOUT</a></li>
                     <li><a href="#skills">SKILLS</a></li>
@@ -141,29 +141,30 @@
 
 
         <div class="information" id="home">
-
-
+            <br> <br><br>
+            <br> <br><br>
             <br> <br><br>
             <p class="life">It's me ...
                 <br>
 
-                <img src="./assets/images/my image Background Removed.png" alt="" style="background-color: rgb(59, 55, 56); float: right; margin-right: 220px; margin-top: 20px; border-radius: 50px; box-shadow:  
+                <img src="./assets/images/my.jpeg" alt="" style="background-color: rgb(59, 55, 56); float: right; margin-right: 220px; margin-top: 20px; border-radius: 50px; box-shadow:  
 
-                        0 0 2rem #a5c7d7,
-                        inset 0 0 2rem #578499,
-                        0 0 2rem #7dc5e6;;" height="400px" width="250px">
+                        0 0 2rem #a2b1b8,
+                        inset 0 0 2rem #54727f,
+                        0 0 2rem #619bba;;" height="340px" width="250px">
                 <br>
                 <br>
                 <span style="color: #1b6ec1; font-size: 38px; margin-left: 40px;"> JITENDRA MAHANT..</span> <br><br>
             <h1 style="margin-left: 250px;"> Junior Creative <span class="name2">Designer</span> <br> and Content
-                Developer.</h1>
+                Developer.</h1> <br>
             </p>
             <br><br><br><br>
             <h3 style="margin-left: 100px;"><i>This is my official portfolio website to showcase
                     <pre>all my works.</pre>
                 </i></h3>
+            <br><br>
             <h1 style="margin-left: 1000px;"><a href="resume.html" class="margin-left"><span
-                        style="color: #EF5A6F; margin-left: 10px; "> Resume
+                        style="color: #f5314b; margin-left: 10px; "> Resume
                     </span></a></h1>
             <br>
 
@@ -239,108 +240,129 @@
             <br> <br>
             <br>
             <div style="display: flex; flex-direction: row;">
-                <a href="newchess.html" style="margin-left: 130px;"> <img src="./assets/images/chess.jpeg" height="200px"
-                        width="300px" style=" border-radius: 50px; box-shadow: 0 0 1rem white,
+                <a href="newchess.html" style="margin-left: 130px;"> <img src="./assets/images/chess.jpeg"
+                        height="200px" width="300px" style=" border-radius: 50px; box-shadow: 0 0 1rem white,
                     0 0 2rem #1cabee,
                     inset 0 0 2rem #1cabee,
                     0 0 2rem #1cabee;
                 ; ;"> </a>
 
-                <a href="registration.html" style="margin-left: 180px;"> <img src="./assets/images/registration-form.jpeg"
-                        height="200px" width="300px" style="  border-radius: 50px; box-shadow: 0 0 1rem white,
+
+                <a href="registration.html" style="margin-left: 180px;"> <img
+                        src="./assets/images/registration-form.jpeg" height="200px" width="300px" style="  border-radius: 50px; box-shadow: 0 0 1rem white,
                 0 0 2rem #1cabee,
                 inset 0 0 2rem #1cabee,
                 0 0 2rem #1cabee;
             ; ;"></a>
-                <a href="iframe-.html" style="margin-left:150px;"> <img src="./assets/images/iframe.png" height="200px" width="300px"
-                        style="  border-radius: 50px; box-shadow: 0 0 1rem white,
+                <a href="iframe-.html" style="margin-left:150px;"> <img src="./assets/images/iframe.png" height="200px"
+                        width="300px" style="  border-radius: 50px; box-shadow: 0 0 1rem white,
     0 0 2rem #1cabee,
     inset 0 0 2rem #1cabee,
     0 0 2rem #1cabee;
 ; ;"></a>
 
-
-
-            </div>
+            </div><br>
+            <div style="display: flex; flex-direction: row;">
+            <h3 style="color: #9209ab; font-size: 30px; margin-left: 140px;">Chess -using Grid</h3>
+            <h3 style="color: #9209ab; font-size: 30px; margin-left:270px;">Registration-form </h3>
+            <h3 style="color: #9209ab; font-size: 30px; margin-left: 220px;">Iframe-using flex</h3>
+        </div>
             <BR></BR>
 
             <br>
             <div style="display: flex; flex-direction: row;">
-                <a href="user.html" style="margin-left: 130px;"> <img src="./assets/images/user.png" height="200px" width="300px"
-                        style=" border-radius: 30px; box-shadow: 0 0 1rem white,
-                    0 0 2rem #1cabee,
-                    inset 0 0 2rem #1cabee,
-                    0 0 2rem #1cabee;
-                ; ;"></a>
-
-                <a href="flex-2.html" style="margin-left: 180px;"> <img src="./assets/images/flex.png" height="200px" width="300px"
-                        style=" border-radius: 30px; box-shadow: 0 0 1rem white,
-                0 0 2rem #1cabee,
-                inset 0 0 2rem #1cabee,
-                0 0 2rem #1cabee;
-            ; ;"></a>
-
-                <a href="flex-3.html" style="margin-left: 150px;"> <img src="./assets/images/flex.png" height="200px" width="300px"
-                        style="  border-radius: 30px; box-shadow: 0 0 1rem white,
-    0 0 2rem #1cabee,
-    inset 0 0 2rem #1cabee,
-    0 0 2rem #1cabee;
-; ;"></a>
-
-
-
-            </div>
-            <br><br>
-
-            <br>
-            <div style="display: flex; flex-direction: row;">
-                <a href="layoutone.html" style="margin-left: 130px; height: 35px;"> <img src="./assets/images/layout.png" height="180px"
+                <a href="user.html" style="margin-left: 130px;"> <img src="./assets/images/user.png" height="200px"
                         width="300px" style=" border-radius: 30px; box-shadow: 0 0 1rem white,
                     0 0 2rem #1cabee,
                     inset 0 0 2rem #1cabee,
                     0 0 2rem #1cabee;
                 ; ;"></a>
 
-
-                <a href="layouttwo.html" style="margin-left: 180px;height: 35px;"> <img src="./assets/images/layout.png" height="180px"
-                        width="300px" style="  border-radius: 30px; box-shadow: 0 0 1rem white,
+                <a href="flex-2.html" style="margin-left: 180px;"> <img src="./assets/images/flex.png" height="200px"
+                        width="300px" style=" border-radius: 30px; box-shadow: 0 0 1rem white,
                 0 0 2rem #1cabee,
                 inset 0 0 2rem #1cabee,
                 0 0 2rem #1cabee;
             ; ;"></a>
 
-
-                <a href="media.html" style="margin-left: 150px;height: 35px;"> <img src="./assets/images/media.png" height="180px"
+                <a href="flex-3.html" style="margin-left: 150px;"> <img src="./assets/images/flex.png" height="200px"
                         width="300px" style="  border-radius: 30px; box-shadow: 0 0 1rem white,
-                0 0 2rem #1cabee,
-                inset 0 0 2rem #1cabee,
-                0 0 2rem #1cabee;
-            ; ;"></a>
+    0 0 2rem #1cabee,
+    inset 0 0 2rem #1cabee,
+    0 0 2rem #1cabee;
+; ;"></a>
 
-<br><br>  <br><br>  <br><br>      <br><br>  <br><br>  <br><br>
-        </div>
-        <br><br>
 
-        <!-- contacts -->
-        <div class=" i-5" id="contact" style="background-color: black;">
-            <span class="name" style="margin-left: 630px; color: #EF5A6F;  background-color: #49284852;">Contacts</span>
-            <br><br><br>
-            <img src="./assets/images/call Background Removed.png" alt=" " height="180px" style="margin-left: 200px;">
-            <img src="./assets/images/mail. Background Removed.png" alt=" " height="165px" style="margin-left: 300px;">
-            <img src="./assets/images/git.png" alt=" " height="100px" style="margin-left: 300px;  margin-bottom: 25px;">
 
-            <div style="display: flex; flex-direction: row;">
-                <h1 style="color: #EF5A6F; margin-left: 190px;"> +8767512181</h1>
-                <h1 style="color: #EF5A6F; margin-left: 270px; ">jitendramahant13 <br>
-                    @gmail.com
-                </h1>
-                <a href="https://github.com/jitendra-mahant-full-stack-developer/jitendra-mahant-full-stack-developer/settings"
-                    style="margin-left: 270px; border: radius 6px; height: 32px;  color: #c0ee1c;" > Github</a>
             </div>
-            <br><br><br><br>
+            <br>
+            <div style="display: flex; flex-direction: row;">
+                <h3 style="color: #9209ab; font-size: 30px; margin-left: 200px;">user-page</h3>
+                <h3 style="color: #9209ab; font-size: 30px; margin-left:410px;">Flex-1 </h3>
+                <h3 style="color: #9209ab; font-size: 30px; margin-left: 350px;">Flex-2</h3>
+            </div>
+            <br><br>
 
+            <br>
+            <div style="display: flex; flex-direction: row;">
+                <a href="layoutone.html" style="margin-left: 130px; height: 35px;"> <img
+                        src="./assets/images/layout.png" height="180px" width="300px" style=" border-radius: 30px; box-shadow: 0 0 1rem white,
+                    0 0 2rem #1cabee,
+                    inset 0 0 2rem #1cabee,
+                    0 0 2rem #1cabee;
+                ; ;"></a>
+
+
+                <a href="layouttwo.html" style="margin-left: 180px;height: 35px;"> <img src="./assets/images/layout.png"
+                        height="180px" width="300px" style="  border-radius: 30px; box-shadow: 0 0 1rem white,
+                0 0 2rem #1cabee,
+                inset 0 0 2rem #1cabee,
+                0 0 2rem #1cabee;
+            ; ;"></a>
+
+
+                <a href="media.html" style="margin-left: 150px;height: 35px;"> <img src="./assets/images/media.png"
+                        height="180px" width="300px" style="  border-radius: 30px; box-shadow: 0 0 1rem white,
+                0 0 2rem #1cabee,
+                inset 0 0 2rem #1cabee,
+                0 0 2rem #1cabee;
+            ; ;"></a>
+
+                <br><br> <br><br> <br><br> <br><br> <br><br> <br><br>
+            </div>
+           
+            <div style="display: flex; flex-direction: row;">
+                <h3 style="color: #9209ab; font-size: 30px; margin-left: 150px;">Layout-1-using table</h3>
+                <h3 style="color: #9209ab; font-size: 30px; margin-left:200px;">Layout-2-using table </h3>
+                <h3 style="color: #9209ab; font-size: 30px; margin-left: 250px;">Media Query</h3>
+            </div>
+            <br><br>
+
+            <!-- contacts -->
+            <div class=" i-5" id="contact" style="background-color: black;">
+                <br><br>
+                <span class="name"
+                    style="margin-left: 630px; color: #EF5A6F;  background-color: #49284852;">Contacts</span>
+                <br><br><br>
+                <img src="./assets/images/call Background Removed.png" alt=" " height="180px"
+                    style="margin-left: 200px;">
+                <img src="./assets/images/mail. Background Removed.png" alt=" " height="165px"
+                    style="margin-left: 300px;">
+                <img src="./assets/images/git.png" alt=" " height="100px"
+                    style="margin-left: 300px;  margin-bottom: 25px;">
+
+                <div style="display: flex; flex-direction: row;">
+                    <h1 style="color: #EF5A6F; margin-left: 190px;"> +8767512181</h1>
+                    <h1 style="color: #EF5A6F; margin-left: 270px; ">jitendramahant13 <br>
+                        @gmail.com
+                    </h1>
+                    <a href="https://github.com/jitendra-mahant-full-stack-developer/jitendra-mahant-full-stack-developer/settings"
+                        style="margin-left: 270px; border: radius 6px; height: 32px;  color: #c0ee1c;"> Github</a>
+                </div>
+                <br><br><br><br>
+
+            </div>
         </div>
-    </div>
 
 
 </body>
