--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
             <div style="display: flex; flex-direction: row;">
                 <h3 style="color: #9209ab; font-size: 30px; margin-left: 150px;">Layout-1-using table</h3>
                 <h3 style="color: #9209ab; font-size: 30px; margin-left:200px;">Layout-2-using table </h3>
-                <h3 style="color: #9209ab; font-size: 30px; margin-left: 250px;">Media Query</h3>
+                <h3 style="color: #9209ab; font-size: 30px; margin-left: 25 0px;">Media Query</h3>
             </div>
             <br><br>
 
