--- a/index.html
+++ b/index.html
@@ -133,13 +133,8 @@
                     <li><a href="#projects">PROJECTS</a></li>
                     <li><a href="#contact">CONTACT</a></li>
                 </ul>
-
         </div>
-
-
         <!--info-->
-
-
         <div class="information" id="home">
             <br> <br><br>
             <br> <br><br>
@@ -147,7 +142,7 @@
             <p class="life">It's me ...
                 <br>
 
-                <img src="./assets/images/my.jpeg" alt="" style="background-color: rgb(59, 55, 56); float: right; margin-right: 220px; margin-top: 20px; border-radius: 50px; box-shadow:  
+                <img src="./assets/images/my.jpeg   " alt="" style="background-color: rgb(59, 55, 56); float: right; margin-right: 220px; margin-top: 20px; border-radius: 50px; box-shadow:  
 
                         0 0 2rem #a2b1b8,
                         inset 0 0 2rem #54727f,
@@ -334,7 +329,7 @@
             <div style="display: flex; flex-direction: row;">
                 <h3 style="color: #9209ab; font-size: 30px; margin-left: 150px;">Layout-1-using table</h3>
                 <h3 style="color: #9209ab; font-size: 30px; margin-left:200px;">Layout-2-using table </h3>
-                <h3 style="color: #9209ab; font-size: 30px; margin-left: 25 0px;">Media Query</h3>
+                <h3 style="color: #9209ab; font-size: 30px; margin-left: 250px;">Media Query</h3>
             </div>
             <br><br>
 
