--- a/gym.html
+++ b/gym.html
@@ -10,10 +10,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-
-        <style>
-            
-        </style>
 </head>
 
 <body>
@@ -66,7 +62,7 @@
         <button type="button" class="btn btn-link">Link</button>
     </div>
     <img src="https://images.jdmagicbox.com/v2/comp/nagpur/b6/0712px712.x712.230311095818.g4b6/catalogue/sam-fitness-gym-katol-nagpur-gyms-3wn8ufzt5g.jpg"
-        alt="" width="90%" style="margin-left: 80px; margin-top: 30px;">
+        alt="" width="100%" style=" margin-top: 30px;">
     <!-- button end -->
 
     <!-- grid -->
