--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
            
             <div style="display: flex; flex-direction: row;">
                 <h3 style="color: #9209ab; font-size: 30px; margin-left: 220px;">boostrap</h3>
-                <h3 style="color: #9209ab; font-size: 30px; margin-left:290px;">Boostrap-using grid</h3>
+                <h3 style="color: #9209ab; font-size: 30px; margin-left:290px;">Gym website</h3>
               
             </div>
             <br><br>
